force-app/main/default/objects/Account/fields/FN__Lon__c.field-meta.xml
<CustomField>
    <fullName>FN__Lon__c</fullName>
    <label>Longitude</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>