force-app/main/default/objects/Account/fields/FN__Which_Address__c.field-meta.xml
<CustomField>
    <fullName>FN__Which_Address__c</fullName>
    <label>Mapping Address</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Billing</fullName>
                <default>true</default>
                <label>Billing</label>
            </value>
            <value>
                <fullName>Shipping</fullName>
            </value>
            <value>
                <fullName>Do Not Map</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>