force-app/main/default/objects/Account/fields/ORGCUSTOM4_DB__c.field-meta.xml
<CustomField>
    <fullName>ORGCUSTOM4_DB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ORGCUSTOM4_DB</label>
    <type>Checkbox</type>
</CustomField>