force-app/main/default/objects/Account/fields/ORGCUSTOM4_OLD_NAME__c.field-meta.xml
<CustomField>
    <fullName>ORGCUSTOM4_OLD_NAME__c</fullName>
    <label>ORGCUSTOM4_OLD_NAME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>